objects/TestExternalID__c.object
<CustomObject>
    <fields>
        <fullName>ExID1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExID1</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExID2__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExID2</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExID3__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExID3</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>TestExternalID</label>
    <nameField>
        <label>TestExternalID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestExternalIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>